Sign Up & Login Buttons

--- a/src/hugo-pages/themes/hugo-book/layouts/_default/baseof.html
+++ b/src/hugo-pages/themes/hugo-book/layouts/_default/baseof.html
@@ -3,6 +3,8 @@
 <head>
   {{ partial "docs/html-head" . }}
   {{ partial "docs/inject/head" . }}
+
+  <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body dir="{{ default "ltr" .Site.Language.LanguageDirection }}">
   <input type="checkbox" class="hidden toggle" id="menu-control" />
