--- a/src/hugo-pages/themes/hugo-book/layouts/_default/baseof.html
+++ b/src/hugo-pages/themes/hugo-book/layouts/_default/baseof.html
@@ -5,6 +5,8 @@
   {{ partial "docs/inject/head" . }}
 
   <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  
+  <link rel="stylesheet" href="/custom_style.css" />
 </head>
 <body dir="{{ default "ltr" .Site.Language.LanguageDirection }}">
   <input type="checkbox" class="hidden toggle" id="menu-control" />
